--- a/public/styles/scss/mainView/_background.scss
+++ b/public/styles/scss/mainView/_background.scss
@@ -20,15 +20,13 @@ body {
   background-color: #fff;
   width: 100%;
   position: relative;
-  height: 100%;
+  min-height: 100%;
   // min-height: -webkit-calc(100vh);
   // min-height:    -moz-calc(100vh);
   // min-height:         calc(100vh);
   padding: 2.5% 0;
   background-color: #fff;
   display: block;
-  float: left;
-  clear: both;
   @media (min-width: 280px) {
     padding: 2.5% 5%;
   }
