--- a/public/styles/scss/mainView/_services.scss
+++ b/public/styles/scss/mainView/_services.scss
@@ -1,31 +1,43 @@
 .boxForServices {
   position: relative;
-  height: 21.5vh;
-  margin: 3vh auto;
+  margin: 3% auto;
   width: 100%;
   height: 100%;
   color: white;
-  &:first-child {
-    margin-top: -webkit-calc(3vh + 40px);
-    margin-top: -moz-calc(3vh + 40px);
-    margin-top: calc(3vh + 40px);
-  }
-  &:last-child {
-    margin-bottom: -webkit-calc(3vh - 40px);
-    margin-bottom: -moz-calc(3vh - 40px);
-    margin-bottom: calc(3vh - 40px);
+  & .boxForServicesTitle.opener {
+    cursor: pointer;
   }
 }
 .boxForServicesTitle {
-  cursor: pointer;
   position: relative;
   text-align: center;
   top: 50%;
   border: $highlight 5px solid;
   background-color: $secondary;
   border-radius: 5px;
-  margin: auto 5vh;
-  padding: 5vh 10%;
+  margin: 3%;
+  padding: 3% 10%;
+  @media (max-width: 480px) {
+    margin: 5%;
+    padding: 5% 10%;
+  }
+  &.gotsAButton {
+    @media (max-width: 760px) {
+      padding-bottom: -webkit-calc(5% + 40px);
+      padding-bottom: -moz-calc(5% + 40px);
+      padding-bottom: calc(5% + 40px);
+    }
+  }
+  // &:first-child {
+  //   margin-top: -webkit-calc(3vh + 40px);
+  //   margin-top: -moz-calc(3vh + 40px);
+  //   margin-top: calc(3vh + 40px);
+  // }
+  // &:last-child {
+  //   margin-bottom: -webkit-calc(3vh - 40px);
+  //   margin-bottom: -moz-calc(3vh - 40px);
+  //   margin-bottom: calc(3vh - 40px);
+  // }
 }
 .centerBox {
   margin: auto;
@@ -35,24 +47,38 @@
 .otherInput {
   display: block;
   width: 100%;
+  margin-top: 2%;
   margin-bottom: 5%;
 }
 .btn-homemadeRight {
-  position: absolute;
-  bottom: 5%;
+  display: inline;
   right: 5%;
+  position: absolute;
 }
 .btn-homemadeLeft {
-  position: absolute;
-  bottom: 5%;
+  display: inline;
   left: 5%;
+  position: absolute;
 }
 #sizeThisTextBoxForServices {
-  margin: 5% 10%;
-  width: 80%;
+  margin: 5%;
+  margin-bottom: 10%;
+  width: 50%;
+}
+.addOption {
+  position: absolute;
+  right: 5%;
 }
 .removeOption {
-  position: absolute;
-  top: 0;
-  right: 5%;
+  display: inline-block;
+}
+.optionContainer {
+  position: relative;
+}
+.optionInput {
+  width: 80%;
+  margin-top: 2%;
+  @media (max-width: 480px) {
+  margin-top: 5%;
+  }
 }
